Fixed paragarh alignment in How it works, images for testimonials

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,19 +1,20 @@
 .block-number {
 	display: inline-block;
-	float: left;
 	font-family: 'roboto', sans-serif;
 	font-weight: 200;
-	font-size: 45px;
+	float: left;
+	font-size: 48px;
 	line-height: 60px;
 	margin-right: 5%;
 	width: 10%;
 }
 .block-description {
 	display: inline-block;
-	float: left;
 	margin-right: 5%;
+	width: 65%;
 }
 .block-description-title {
 	font-size: 26px;
 	font-weight: 100;
+
 }
